[package]
name = "rust-code-executor"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
futures = "0.3.31"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
log = "0.4.28"
bollard = "*"
serde_json = "1.0.145"
axum = { version = "0.8.6", features = ["multipart"] }
env_logger = "0.11.8"